--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         </div>
                         <div class="team_element_carts_cart_text">
                             <h5>Keanu Charles Reeves</h5>
-                            <div class="team_element_carts_cart_text_position">Ἰησοῦς</div>
+                            <p>Jesus</p>
                             <p>"You are breathtaking!"</p>
                             <div class="team_element_carts_cart_text_socet"></div>
                         </div>
@@ -306,7 +306,7 @@
                         </div>
                         <div class="team_element_carts_cart_text">
                             <h5>Evgenyi Abramson</h5>
-                            <div class="team_element_carts_cart_text_position">Teacher</div>
+                            <p>Teacher</p>
                             <p>"I'm busy"</p>
                             <div class="team_element_carts_cart_text_socet"></div>
                         </div>
