--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         </div>
                         <div class="team_element_carts_cart_text">
                             <h5>Evgenyi Abramson</h5>
-                            <p>Teacher</p>
+                            <p>Bro</p>
                             <p>"I'm busy"</p>
                             <div class="team_element_carts_cart_text_socet"></div>
                         </div>
