--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         </div>
                         <div class="team_element_carts_cart_text">
                             <h5>Kyle Krylov</h5>
-                            <div class="team_element_carts_cart_text_position">Boss</div>
+                            <p> Boss</p>
                             <p>"Java относится к javascript так же как сом к сомали."</p>
                             <div class="team_element_carts_cart_text_socet"></div>
                         </div>
@@ -317,7 +317,7 @@
                         </div>
                         <div class="team_element_carts_cart_text">
                             <h5>Greta Thunberg</h5>
-                            <div class="team_element_carts_cart_text_position">Ecologist</div>
+                            <p> Ecologist</p>
                             <p>"Right hire right now!"</p>
                             <div class="team_element_carts_cart_text_socet"></div>
                         </div>
