--- a/index.html
+++ b/index.html
@@ -342,7 +342,13 @@
         </div>
     </div>
     <footer>
-        <div class="contact" id="contact"></div>
+        <div class="contact" id="contact">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
     <script src="slick/slick.min.js"></script>
