--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
                 <div class="portfolio_element_galery">
                     <div class="portfolio_element_galery_menu">
                         <ul>
-                            <li><a href="#">All</a></li>
-                            <li><a href="#">Photograph</a></li>
-                            <li><a href="#">Video</a></li>
-                            <li><a href="#">Graphics</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Web Sites</a></li>
+                            <li><a href="">All</a></li>
+                            <li><a href="">Photograph</a></li>
+                            <li><a href="">Video</a></li>
+                            <li><a href="">Graphics</a></li>
+                            <li><a href="">Branding</a></li>
+                            <li><a href="">Web Sites</a></li>
                         </ul>
                     </div>
                     <div class="portfolio_element_galery_projects">
@@ -272,7 +272,7 @@
         <div class="team" id="team">
             <div class="team_element">
                 <div class="team_element_greeting">
-                    <h3>Our Team members</h3>
+                    <h3>Our Team</h3>
                     <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."
                         <br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
                 </div>
