--- a/index.html
+++ b/index.html
@@ -342,12 +342,20 @@
         </div>
     </div>
     <footer>
-        <div class="contact" id="contact">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+        <div class="contacts" id="contact">
+            <div class="contacts_element_greeting">
+                <h3>Contact us </h3>
+                <h5>The work we have done so far for our awesome clients </h5>
+                <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."
+                    <br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
+            </div>
+            <div class="contacts_element_msg-info">
+                <div class="contacts_element_msg-info_msg"> </div>
+                <div class="contacts_element_msg-info_info">
+                    <h5>Contact info </h5>
+                    <div class="contacts_element_msg-info_info_tel"></div>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
