--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     </div>
                     <div class="team_element_carts_cart">
                         <div class="team_element_carts_cart_img">
-                            <img src="img/our_team/brat.jpg" alt="Gretta">
+                            <img src="img/our_team/brat.jpg" alt="Abramson">
                         </div>
                         <div class="team_element_carts_cart_text">
                             <h5>Evgenyi Abramson</h5>
@@ -343,27 +343,54 @@
     </div>
     <footer>
         <div class="contacts" id="contact">
-            <div class="contacts_element_greeting">
+            <div class="contacts_header">
                 <h3>Contact us </h3>
                 <h5>The work we have done so far for our awesome clients </h5>
                 <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."
                     <br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
             </div>
-            <div class="contacts_element_msg-info">
-                <div class="contacts_element_msg-info_msg"> </div>
-                <div class="contacts_element_msg-info_info">
-                    <h5>Contact info </h5>
-                    <div class="contacts_element_msg-info_info_tel"></div>
+            <div class="contacts_form-info">
+                <div class="contacts_form">
+                    <input type="name" alt="Name" placeholder="Name">
+                    <input type="email" alt="Email" placeholder="Email">
+                    <input type="phone" alt="Phone" placeholder="Phone">
+                    <textarea name=" " id=" " cols="30 " rows="10" placeholder="Massege"></textarea>
+                </div>
+                <div class="contacts_sc-info">
+                    <div class="contacts_info">
+                        <h5>Contact info </h5>
+                        <div class="contacts_tel">
+                            <span><img src="/img/contact/phone.svg " alt=" "></span>
+                            <p>8–800–555–67–34</p>
+                        </div>
+                        <div class="contacts_mail">
+                            <span><img src="img/contact/mail1.svg " alt="mail "></span>
+                            <p>reportphishing@applе.com</p>
+                        </div>
+                        <div class="contacts_address ">
+                            <span><img src="/img/contact/home-run.svg " alt=" "></span>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="contacts_socet ">
+                        <h5>Follow us </h5>
+                        <div class="contacts_socet_img ">
+                            <img src="img/contact/facebook.svg " alt=" ">
+                            <img src="img/contact/vk.svg " alt=" ">
+                            <img src="img/contact/twitter.svg " alt=" ">
+                            <img src="img/contact/instagram.svg " alt=" ">
+                            <img src="img/contact/google-plus.svg " alt=" ">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
-    <script src="slick/slick.min.js"></script>
-    <script src="js/burger.js"></script>
-    <script src="js/slaider.js"></script>
-
-    <script src="js/scroll.js"></script>
+    <script src="slick/slick.min.js "></script>
+    <script src="js/burger.js "></script>
+    <script src="js/slaider.js "></script>
+    <script src="js/scroll.js "></script>
 
 </body>
 
