--- a/index.html
+++ b/index.html
@@ -345,35 +345,32 @@
         <div class="contacts" id="contact">
             <div class="contacts_header">
                 <h3>Contact us </h3>
-                <h5>The work we have done so far for our awesome clients </h5>
-                <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."
-                    <br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
             </div>
             <div class="contacts_form-info">
                 <div class="contacts_form">
                     <input type="name" alt="Name" placeholder="Name">
                     <input type="email" alt="Email" placeholder="Email">
                     <input type="phone" alt="Phone" placeholder="Phone">
-                    <textarea name=" " id=" " cols="30 " rows="10" placeholder="Massege"></textarea>
+                    <textarea name=" " id=" " cols="30 " rows="10" placeholder="Massege" resize: none;></textarea>
                 </div>
                 <div class="contacts_sc-info">
                     <div class="contacts_info">
                         <h5>Contact info </h5>
                         <div class="contacts_tel">
-                            <span><img src="/img/contact/phone.svg " alt=" "></span>
+                            <span><img src="img/contact/phone.svg" alt="phone"></span>
                             <p>8–800–555–67–34</p>
                         </div>
                         <div class="contacts_mail">
-                            <span><img src="img/contact/mail1.svg " alt="mail "></span>
+                            <span><img src="img/contact/mail1.svg" alt="mail"></span>
                             <p>reportphishing@applе.com</p>
                         </div>
                         <div class="contacts_address ">
-                            <span><img src="/img/contact/home-run.svg " alt=" "></span>
-                            <p></p>
+                            <span><img src="img/contact/home-run.svg" alt="home"></span>
+                            <p>1 Infinite Loop Cupertino, CA, <br> 95014, United States, USA</p>
                         </div>
                     </div>
                     <div class="contacts_socet ">
-                        <h5>Follow us </h5>
+                        <h5>Follow us</h5>
                         <div class="contacts_socet_img ">
                             <img src="img/contact/facebook.svg " alt=" ">
                             <img src="img/contact/vk.svg " alt=" ">
