--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <div class="workflow_element">
                 <div class="workflow_element_greeting">
                     <h3>Our Workflow </h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                    <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                         specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
-                    </p>
+                    </span>
                 </div>
                 <div class="workflow_element_processes">
                     <div class="workflow_element_processes_process">
@@ -380,6 +380,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+        </div>
+        <div class="ftr-copy">
+            <div class="ftr-copy_text">
+                <span>Copyright © 2020 Kyle Inc. All rights reserved.</span>
+                <span></span>
             </div>
         </div>
     </footer>
