--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
             </div>
             <div class="burger">
-                <span> </span>
+                <span></span>
             </div>
         </nav>
         <div class="news" id="news">
@@ -351,7 +351,11 @@
                     <input type="name" alt="Name" placeholder="Name">
                     <input type="email" alt="Email" placeholder="Email">
                     <input type="phone" alt="Phone" placeholder="Phone">
-                    <textarea name=" " id=" " cols="30 " rows="10" placeholder="Massege" resize: none;></textarea>
+                    <textarea name="Massege" placeholder="Massege" resize: none;></textarea>
+                    <button>
+                        Send Message
+                   </button>
+
                 </div>
                 <div class="contacts_sc-info">
                     <div class="contacts_info">
@@ -372,11 +376,11 @@
                     <div class="contacts_socet ">
                         <h5>Follow us</h5>
                         <div class="contacts_socet_img ">
-                            <img src="img/contact/facebook.svg " alt=" ">
-                            <img src="img/contact/vk.svg " alt=" ">
-                            <img src="img/contact/twitter.svg " alt=" ">
-                            <img src="img/contact/instagram.svg " alt=" ">
-                            <img src="img/contact/google-plus.svg " alt=" ">
+                            <a href="#"><img src="img/contact/facebook.svg " alt=" "></a>
+                            <a href="#"><img src="img/contact/vk.svg " alt=" "></a>
+                            <a href="#"><img src="img/contact/twitter.svg " alt=" "></a>
+                            <a href="#"><img src="img/contact/instagram.svg " alt=" "></a>
+                            <a href="#"><img src="img/contact/google-plus.svg " alt=" "></a>
                         </div>
                     </div>
                 </div>
