--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тестовая страница</title>
+    <title>One does not simply, stop and distract the programmer!</title>
     <link rel="shortcut icon" href="img/about/mac.png" type="image/png">
     <meta name="description" content="Тренинг верстки. Добавление JS: слик_сладер, выбокри по категориям и по мелочи. Изучение @keyframes. и т.д.">
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
