--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>One does not simply, stop and distract the programmer!</title>
     <link rel="shortcut icon" href="img/about/mac.png" type="image/png">
     <meta name="description" content="Тренинг верстки. Добавление JS: слик_сладер, выбокри по категориям и по мелочи. Изучение @keyframes. и т.д.">
+    <meta property="og:image" content="img/about/One does not simply.jpg">
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
