--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 , maximum-scale=1.0, user-scalable=0">
     <title>One does not simply, stop and distract the programmer!</title>
     <link rel="shortcut icon" href="img/about/mac.png" type="image/png">
-    <meta name="description" content="Тренинг верстки. Добавление JS: слик_сладер, выбокри по категориям и по мелочи. Изучение @keyframes. и т.д.">
+
+    <meta name="author" content="kyle">
+    <meta name="copyright" content="kyle">
+    <meta name="address" content="Earth">
+
+
     <meta property="og:image" content="img/about/One does not simply.jpg">
+    <meta property="og:description" content="Тренинг верстки. Добавление JS: слик_сладер, выбокри по категориям и по мелочи. Изучение @keyframes. и т.д.">
+    <meta property="og:site_name" content="One does not simply">
+    <meta property="og:url" content="http://kyle.com">
+
+    <meta name="robots" content="none">
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -67,8 +77,11 @@
             <div class="workflow_element">
                 <div class="workflow_element_greeting">
                     <h3>Our Workflow </h3>
-                    <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                    <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                        been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                        galley of type and scrambled it to make a type
+                        specimen book. It has survived not only five centuries, but also the leap into electronic
+                        typesetting.
                     </span>
                 </div>
                 <div class="workflow_element_processes">
@@ -168,38 +181,39 @@
                 </div>
                 <div class="portfolio_element_galery">
                     <div class="portfolio_element_galery_menu">
-                        <ul>
-                            <li><a href="">All</a></li>
-                            <li><a href="">Photograph</a></li>
-                            <li><a href="">Video</a></li>
-                            <li><a href="">Graphics</a></li>
-                            <li><a href="">Branding</a></li>
-                            <li><a href="">Web Sites</a></li>
-                        </ul>
+                        <div class="portfolio_element_galery_menu_btn">
+                            <a id="video">All</a>
+                        </div>
+                        <div class="portfolio_element_galery_menu_btn">
+                            <a id="photo">Photograph</a>
+                        </div>
+                        <div class="portfolio_element_galery_menu_btn">
+                            <a id="video">Video</a>
+                        </div>
+                        <div class="portfolio_element_galery_menu_btn">
+                            <a id="graphic">Graphics</a>
+                        </div>
+                        <div class="portfolio_element_galery_menu_btn">
+                            <a id="sites">Web Sites</a>
+                        </div>
                     </div>
                     <div class="portfolio_element_galery_projects">
                         <div class="portfolio_element_galery_projects_project">
-                            <div class="portfolio_element_galery_projects_project_img">
-                                <img src="img/portfolio/Layer_5.jpg" alt="">
-                            </div>
+                            <div class="portfolio_element_galery_projects_project_img"><img src="img/portfolio/Layer_5.jpg" alt=""></div>
                             <div class="portfolio_element_galery_projects_project_text">
                                 <h5>Duis nec congue</h5>
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
                         <div class="portfolio_element_galery_projects_project">
-                            <div class="portfolio_element_galery_projects_project_img">
-                                <img src="img/portfolio/Layer_6.jpg" alt="">
-                            </div>
+                            <div class="portfolio_element_galery_projects_project_img"> <img src="img/portfolio/Layer_6.jpg" alt=""> </div>
                             <div class="portfolio_element_galery_projects_project_text">
                                 <h5>Duis nec congue</h5>
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
                         <div class="portfolio_element_galery_projects_project">
-                            <div class="portfolio_element_galery_projects_project_img">
-                                <img src="img/portfolio/Layer_7.jpg" alt="">
-                            </div>
+                            <div class="portfolio_element_galery_projects_project_img"><img src="img/portfolio/Layer_7.jpg" alt=""></div>
                             <div class="portfolio_element_galery_projects_project_text">
                                 <h5>Duis nec congue</h5>
                                 <p>Neque porro quisquam est qui dolorem</p>
@@ -355,9 +369,7 @@
                     <input type="email" alt="Email" placeholder="Email">
                     <input type="phone" alt="Phone" placeholder="Phone">
                     <textarea name="Massege" placeholder="Massege" resize: none;></textarea>
-                    <button>
-                        Send Message
-                   </button>
+                    <button>Send</button>
 
                 </div>
                 <div class="contacts_sc-info">
