--- a/index.html
+++ b/index.html
@@ -179,44 +179,45 @@
                 <div class="portfolio_element_galery">
                     <div class="portfolio_element_galery_menu">
                         <div class="portfolio_element_galery_menu_btn">
-                            <a id="video">All</a>
+                            <button id="all">All</button>
                         </div>
                         <div class="portfolio_element_galery_menu_btn">
-                            <a id="photo">Photograph</a>
+                            <button id="photo">Photograph</button>
                         </div>
                         <div class="portfolio_element_galery_menu_btn">
-                            <a id="video">Video</a>
+                            <button id="video">Video</button>
                         </div>
                         <div class="portfolio_element_galery_menu_btn">
-                            <a id="graphic">Graphics</a>
+                            <button id="graphic">Graphics</button>
                         </div>
                         <div class="portfolio_element_galery_menu_btn">
-                            <a id="sites">Web Sites</a>
+                            <button id="sites">Web Sites</button>
                         </div>
                     </div>
+
                     <div class="portfolio_element_galery_projects">
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project sites">
                             <div class="portfolio_element_galery_projects_project_img"><img src="img/portfolio/Layer_5.jpg" alt=""></div>
                             <div class="portfolio_element_galery_projects_project_text">
                                 <h5>Duis nec congue</h5>
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project graphic">
                             <div class="portfolio_element_galery_projects_project_img"> <img src="img/portfolio/Layer_6.jpg" alt=""> </div>
                             <div class="portfolio_element_galery_projects_project_text">
                                 <h5>Duis nec congue</h5>
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project video">
                             <div class="portfolio_element_galery_projects_project_img"><img src="img/portfolio/Layer_7.jpg" alt=""></div>
                             <div class="portfolio_element_galery_projects_project_text">
                                 <h5>Duis nec congue</h5>
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project sites">
                             <div class="portfolio_element_galery_projects_project_img">
                                 <img src="img/portfolio/Layer_8.jpg" alt="">
                             </div>
@@ -225,7 +226,7 @@
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project graphic">
                             <div class="portfolio_element_galery_projects_project_img">
                                 <img src="img/portfolio/Layer_9.jpg" alt="">
                             </div>
@@ -234,7 +235,7 @@
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project photo">
                             <div class="portfolio_element_galery_projects_project_img">
                                 <img src="img/portfolio/Layer_10.jpg" alt="">
                             </div>
@@ -243,7 +244,7 @@
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project video">
                             <div class="portfolio_element_galery_projects_project_img">
                                 <img src="img/portfolio/Layer_11.jpg" alt="">
                             </div>
@@ -252,7 +253,7 @@
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project graphic">
                             <div class="portfolio_element_galery_projects_project_img">
                                 <img src="img/portfolio/Layer_12.jpg" alt="">
                             </div>
@@ -261,7 +262,7 @@
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project photo">
                             <div class="portfolio_element_galery_projects_project_img">
                                 <img src="img/portfolio/Layer_13.jpg" alt="">
                             </div>
@@ -270,7 +271,7 @@
                                 <p>Neque porro quisquam est qui dolorem</p>
                             </div>
                         </div>
-                        <div class="portfolio_element_galery_projects_project">
+                        <div class="portfolio_element_galery_projects_project sites">
                             <div class="portfolio_element_galery_projects_project_img">
                                 <img src="img/portfolio/Layer_14.jpg" alt="">
                             </div>
@@ -411,7 +412,7 @@
     <script src="js/burger.js "></script>
     <script src="js/slaider.js "></script>
     <script src="js/scroll.js "></script>
-
+    <script src="js/categories.js"></script>
 </body>
 
 </html>
