--- a/index.html
+++ b/index.html
@@ -363,45 +363,45 @@
             </div>
             <div class="contacts_form-info">
                 <div class="contacts_form">
-                    <input type="name" alt="Name" placeholder="Name">
-                    <input type="email" alt="Email" placeholder="Email">
-                    <input type="phone" alt="Phone" placeholder="Phone">
-                    <textarea name="Massege" placeholder="Massege" resize: none;></textarea>
-                    <button>Send</button>
+                    <input name="name" type="name" alt="Name" placeholder="Name" pattern="[A-Za-zА-Яа-яЁё]+" maxlength="22" required>
+                    <input name=" email " type="email " alt="Email " placeholder="Email" pattern="[A-Za-z]+" required>
+                    <input name="phone " type="phone " alt="Phone " placeholder="Phone +7 (123) 456-78-90 " pattern="[\+]\d{1}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2} " minlength="18 " maxlength="18 " required>
+                    <textarea name="Massege " placeholder="Massege " resize: none;></textarea>
+                    <button type="submit ">Send</button>
 
                 </div>
-                <div class="contacts_sc-info">
-                    <div class="contacts_info">
+                <div class="contacts_sc-info ">
+                    <div class="contacts_info ">
                         <h5>Contact info </h5>
-                        <div class="contacts_tel">
-                            <span><img src="img/contact/phone.svg" alt="phone"></span>
+                        <div class="contacts_tel ">
+                            <span><img src="img/contact/phone.svg " alt="phone "></span>
                             <p>8–800–555–67–34</p>
                         </div>
-                        <div class="contacts_mail">
-                            <span><img src="img/contact/mail1.svg" alt="mail"></span>
+                        <div class="contacts_mail ">
+                            <span><img src="img/contact/mail1.svg " alt="mail "></span>
                             <p>reportphishing@applе.com</p>
                         </div>
                         <div class="contacts_address ">
-                            <span><img src="img/contact/home-run.svg" alt="home"></span>
+                            <span><img src="img/contact/home-run.svg " alt="home "></span>
                             <p>1 Infinite Loop Cupertino, CA, <br> 95014, United States, USA</p>
                         </div>
                     </div>
                     <div class="contacts_socet ">
                         <h5>Follow us</h5>
                         <div class="contacts_socet_img ">
-                            <a href="#"><img src="img/contact/facebook.svg " alt=" "></a>
-                            <a href="#"><img src="img/contact/vk.svg " alt=" "></a>
-                            <a href="#"><img src="img/contact/twitter.svg " alt=" "></a>
-                            <a href="#"><img src="img/contact/instagram.svg " alt=" "></a>
-                            <a href="#"><img src="img/contact/google-plus.svg " alt=" "></a>
+                            <a href="# "><img src="img/contact/facebook.svg " alt=" "></a>
+                            <a href="# "><img src="img/contact/vk.svg " alt=" "></a>
+                            <a href="# "><img src="img/contact/twitter.svg " alt=" "></a>
+                            <a href="# "><img src="img/contact/instagram.svg " alt=" "></a>
+                            <a href="# "><img src="img/contact/google-plus.svg " alt=" "></a>
                         </div>
                     </div>
                 </div>
             </div>
 
         </div>
-        <div class="ftr-copy">
-            <div class="ftr-copy_text">
+        <div class="ftr-copy ">
+            <div class="ftr-copy_text ">
                 <span>Copyright © 2020 Kyle Inc. All rights reserved.</span>
                 <span></span>
             </div>
@@ -412,7 +412,7 @@
     <script src="js/burger.js "></script>
     <script src="js/slaider.js "></script>
     <script src="js/scroll.js "></script>
-    <script src="js/categories.js"></script>
+    <script src="js/categories.js "></script>
 </body>
 
 </html>
