--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="address" content="Earth">
 
 
-    <meta property="og:image" content="img/header/9-layers.jpg">
+    <meta property="og:image" content="img/header/p.jpg">
     <meta property="og:description" content="Тренинг верстки. Добавление JS: слик_сладер, выбокри по категориям и по мелочи. Изучение @keyframes. и т.д.">
     <meta property="og:site_name" content="One does not simply">
     <meta property="og:url" content="http://kyle.com">
