--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
             <div class="contacts_form-info">
                 <form class="contacts_form">
                     <input name="name" type="name" alt="Name" placeholder="Name" pattern="[A-Za-z]+|[А-ЯЁа-яё]+" maxlength="22" required>
-                    <input name=" email " type="email " alt="Email " placeholder="Email" pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})" required>
-                    <input name="phone " type="phone "    alt="Phone " placeholder="+7(123)456-78-90" pattern="[\+]\d{1}\[\(]\d{3}[\)]\d{3}[\-]\d{2}[\-]\d{2}" minlength="16 " maxlength="17 " required>
+                    <input name=" email " type="email " alt="Email " placeholder="Email" pattern="[A-z0-9_.-]{1,}@[A-z0-9_.-]{1,}.[A-z]{2,8}" required>
+                    <input name="phone " type="phone "    alt="Phone " placeholder="+7(123)456-78-90" pattern="[\+]\d{1}\[\(]\d{3}[\)]\d{3}[\-]\d{2}[\-]\d{2}" minlength="16 " maxlength="16 " required>
                     <textarea name="Massege " placeholder="Massege " resize: none;></textarea>
                     <button type="submit ">Send</button>
 
