--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta name="address" content="Earth">
 
 
+    <!-- <meta property="og:url" content="verstka_-3"> -->
     <meta property="og:image" content="img/header/p.jpg">
     <meta property="og:description" content="Тренинг верстки. Добавление JS: слик_сладер, выбокри по категориям и по мелочи. Изучение @keyframes. и т.д.">
     <meta property="og:site_name" content="One does not simply">
-    <meta property="og:url" content="http://kyle.com">
 
     <meta name="robots" content="none">
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
